--- a/Dashboard/Web.config
+++ b/Dashboard/Web.config
@@ -57,7 +57,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="RahulPracticeEntities" connectionString="metadata=res://*/Models.LoginModal.csdl|res://*/Models.LoginModal.ssdl|res://*/Models.LoginModal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=I3SERVER;initial catalog=RahulPractice;user id=sa;password=saa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="RahulPracticeEntities" connectionString="metadata=res://*/Models.LoginModal.csdl|res://*/Models.LoginModal.ssdl|res://*/Models.LoginModal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=******;initial catalog=RahulPractice;user id=*****;password=**********;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
